# stdexec

./: .gitignore  CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
